--- a/static/style.css
+++ b/static/style.css
@@ -16,8 +16,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 20px 10px;
+  min-height: 100vh;
 }
 
 .brand {
@@ -74,12 +75,47 @@ body {
   100% { transform: scale(1); }
 }
 
+.mic-button i {
+  font-size: 36px;
+  color: white;
+  z-index: 2;
+}
+
+.mic-button canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90px;
+  height: 90px;
+  pointer-events: none;
+  z-index: 1;
+}
+
 #status {
   font-size: 1.2rem;
   color: #00ffff;
   text-align: center;
   margin-top: 20px;
 }
+
+audio {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .mic-button {
+    width: 70px;
+    height: 70px;
+  }
+  .mic-button i {
+    font-size: 28px;
+  }
+  .mic-button canvas {
+    width: 70px;
+    height: 70px;
+  }
+}
+
 
 
 
